--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -15,7 +15,7 @@ button:hover {
 }
 
 .filters {
-	color: white;
+	background-color: white;
 	height: 70px;
 	width: 100%;
 	border: 1px solid #DDDDDD;
