--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -2,11 +2,11 @@ body {
 	margin: 0;
 	padding: 0;
 	color: #484848;
+	font-size: 14px;
 	font-size: "Circular", "Helvetica Neue", "Helvetica", "Arial", "sans-serif";
 }
 
 .container {
 	max-width: 1000px;
 	margin: 30px auto;
-	text-align: center;
 }
