solution to task 6-8

--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -3,5 +3,5 @@ header {
 	background-position: left 20px center;
 	height: 70px;
 	width: 100%;
-	border: 1px solid #CCCCCC;
+	border-bottom: 1px solid #CCCCCC;
 }
