--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,11 +1,11 @@
 footer {
 	background-color: #FFFFFF;
-	border-top: 1px solid #CCCCCC;
-	height: 60px;
-	width: 100%;
-	position: absolute;
-	bottom: 0px;
-	display: flex;
-	justify-content: center;
 	align-items: center;
+	border-top: 1px solid #CCCCCC;
+	bottom: 0;
+	display: flex;
+	height: 60px;
+	justify-content: center;
+	position: absolute;
+	width: 100%;
 }
